Fixed some questions alignment and broke categories to build it again right

--- a/CorteQuiz/src/app/components/categorias/categorias.component.css
+++ b/CorteQuiz/src/app/components/categorias/categorias.component.css
@@ -1,16 +1,10 @@
-
-.image-div img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 4px;
-    
-    gap: 10px 20px;
+#image-container-categories {
+    width: 100%;
 }
 
+
 .image-div {
-    column-gap: 10px ;
-    transition: transform 0.3s, border 0.3s;
-    margin: 25px;
-    width: 220px;
-    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
