--- a/CorteQuiz/src/app/components/pregunta-respuesta/pregunta-respuesta.component.css
+++ b/CorteQuiz/src/app/components/pregunta-respuesta/pregunta-respuesta.component.css
@@ -13,6 +13,9 @@
 }
 
 #estadisticas_q_a {
+    display: flex;
+    justify-content: center;
+    text-align: center;
     padding-top: 40px;
 }
 
