--- a/CorteQuiz/src/styles.css
+++ b/CorteQuiz/src/styles.css
@@ -56,7 +56,6 @@ body::after {
 }
 
 .image-div:hover {
-    transform: scale(1);
     border: 4px solid #fff;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
